# djinn

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md  todo.txt
cmake/: Cache.cmake  CompilerWarnings.cmake  ConanConfig.cmake  Doxygen.cmake  PreventInSourceBuilds.cmake  Sanitizers.cmake  StandardProjectSettings.cmake  StaticAnalyzers.cmake
shader/: shad.frag  shad.vert
src/: App.cpp  App.h  CMakeLists.txt  ChooseCapabilities.cpp  ChooseCapabilities.h  DebugMessenger.cpp  DebugMessenger.h  QueueFamilies.cpp  QueueFamilies.h  ShaderLoader.cpp  ShaderLoader.h  SwapChainSupportDetails.cpp  SwapChainSupportDetails.h  VulkanEngine.cpp  VulkanEngine.h  Warnings.h  ext_inc.h  gfxDebug.cpp  gfxDebug.h  hello.cpp  hello.h  main.cpp
src/DjinnLib/: Array.h  Queue.h  Types.h  Utils.h
src/core/: Buffer.cpp  Buffer.h  Commands.cpp  Commands.h  Context.cpp  Context.h  GraphicsPipeline.cpp  GraphicsPipeline.h  IO.h  Image.cpp  Image.h  Instance.cpp  Instance.h  Memory.cpp  Memory.h  Primitives.cpp  Primitives.h  RenderPass.cpp  RenderPass.h  SwapChain.cpp  SwapChain.h  core.cpp  core.h  defs.h
